--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -33,6 +33,19 @@
 .cartHeader > p {
     margin: 10px;
 }
+
+.cartHeader {
+    background-color: rgb(71, 218, 255);
+    width: 90%;
+    box-sizing: border-box;
+    margin: auto;
+    color: white;
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr;
+    font: 300 0.7vmax "Roboto";
+}
+
+
 .cartHeader > p:last-child {
     text-align: end;
 }
@@ -90,7 +103,7 @@
 }
   
 .cartGrossProfit_box {
-    border-top: 3px solid tomato;
+    border-top: 3px solid rgb(45, 186, 252);
     margin: 1vmax 4vmax;
     box-sizing: border-box;
     padding: 2vmax 0;
@@ -104,7 +117,7 @@
     justify-content: flex-end;
 }
 .checkOut_btn > button {
-    background-color: tomato;
+    background-color: rgb(71, 218, 255);
     color: white;
     border: none;
     padding: 0.8vmax 4vmax;
@@ -114,3 +127,58 @@
     cursor: pointer;
     border-radius: 30px;
 }
+
+@media screen and (max-width: 600px) {
+    .cartPage {
+      padding: 0;
+      padding-top: 12vmax;
+      min-height: 60vh;
+    }
+  
+    .cartHeader {
+      width: 100%;
+      font: 300 1.7vmax "Roboto";
+      grid-template-columns: 3fr 1fr 1fr;
+    }
+  
+    .cart_main {
+      width: 100%;
+      grid-template-columns: 3fr 1fr 1fr;
+    }
+  
+    .cartInput {
+      height: 20vmax;
+    }
+  
+    .cartInput > button {
+      padding: 1.5vmax;
+    }
+  
+    .cartInput > input {
+      width: 2vmax;
+      padding: 1.5vmax;
+      font: 400 1.8vmax "Roboto";
+    }
+  
+    .cartSubtotal {
+      padding: 1.5vmax;
+      height: 20vmax;
+      font: 300 2vmax "Roboto";
+    }
+  
+    .cartGrossProfit {
+      display: grid;
+      grid-template-columns: 0fr 2fr;
+    }
+  
+    .cartGrossProfit_box {
+      padding: 2vmax;
+      font: 300 2vmax "Roboto";
+    }
+  
+    .checkOut_btn> button {
+      padding: 2vmax 4vmax;
+      width: 100%;
+      font: 300 2vmax "Roboto";
+    }
+  }
