--- a/client/src/components/CartItemCard/style.css
+++ b/client/src/components/CartItemCard/style.css
@@ -32,3 +32,30 @@
     font: 100 0.8vmax "Roboto";
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 600px) {
+    .CartItemCard {
+        padding: 3vmax;
+        height: 25vmax;
+    }
+    .CartItemCard > img {
+        width: 10vmax;
+    }
+  
+    .CartItemCard > div {
+        margin: 1vmax 2vmax;
+    }
+  
+    .CartItemCard > div > a {
+        font: 300 2vmax cursive;
+    }
+  
+    .CartItemCard > div > span {
+        font: 300 1.9vmax "Roboto";
+    }
+  
+    .CartItemCard > div > p {
+        font: 100 1.8vmax "Roboto";
+    }
+}
