--- a/client/src/components/Products/style.css
+++ b/client/src/components/Products/style.css
@@ -14,6 +14,12 @@ flex-wrap: wrap;
 padding: 0 5vmax;
 justify-content: center;
 min-height: 30vh;
+margin-left:14vmax;
+
+
+/* position: absolute;
+left: 14vmax;
+top: 10vmax; */
 }
 
 .paginationBox {
@@ -91,4 +97,30 @@ color: tomato;
 
 .filterBox > fieldset {
 border: 1px solid rgba(0, 0, 0, 0.329);
+}
+
+@media screen and (max-width: 1150px) {
+    .category-link{
+        font: 400 1.8vmax "Roboto";
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .filterBox {
+        width: 20vmax;
+        position: static;
+        margin: auto;
+    }
+
+    .page-link {
+        font: 300 1.7vmax "Roboto";
+    }
+
+    .category-link {
+        font: 400 1.7vmax "Roboto";
+    }
+
+    .products {
+        margin-left: 0;
+    }
 }
